@@ -1408,7 +1408,8 @@ convert_system_partition_to_system_disk (const char *os_dev, struct stat *st)
 		  if (tree)
 		    dm_tree_free (tree);
 		  free (path);
-		  char *ret = grub_find_device (NULL, (major << 8) | minor);
+		  char *ret = grub_find_device ("/dev/mapper",
+						(major << 8) | minor);
 		  return ret;
 		}
 
